--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
   },
   "devDependencies": {},
   "peerDependencies": {
+    "date-fns": "2.29.x",
+    "date-fns-tz": "1.3.x",
     "svelte": "*",
     "@sveltejs/kit": "*"
   },
