--- a/package.json
+++ b/package.json
@@ -17,13 +17,7 @@
   "license": "MIT",
   "homepage": "https://github.com/temporalio/ui/tree/main",
   "scripts": {},
-  "dependencies": {},
-  "devDependencies": {},
-  "peerDependencies": {
-    "date-fns": "2.29.x",
-    "date-fns-tz": "1.3.x",
-    "svelte": "*",
-    "@sveltejs/kit": "*",
+  "dependencies": {
     "@codemirror/autocomplete": "^6.17.0",
     "@codemirror/commands": "^6.6.0",
     "@codemirror/lang-json": "^6.0.1",
@@ -39,6 +33,8 @@
     "@sveltejs/package": "^2.2.6",
     "@sveltejs/svelte-virtual-list": "^3.0.1",
     "class-variance-authority": "^0.7.0",
+    "date-fns": "^2.29.3",
+    "date-fns-tz": "^1.3.7",
     "esm-env": "^1.0.0",
     "hast-util-sanitize": "^5.0.1",
     "hast-util-to-html": "^9.0.1",
@@ -59,6 +55,13 @@
     "unist-util-remove": "^4.0.0",
     "url-pattern": "^1.0.3",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {},
+  "peerDependencies": {
+    "date-fns": "2.29.x",
+    "date-fns-tz": "1.3.x",
+    "svelte": "*",
+    "@sveltejs/kit": "*"
   },
   "packageManager": "pnpm@8.15.7+sha256.50783dd0fa303852de2dd1557cd4b9f07cb5b018154a6e76d0f40635d6cee019"
 }
